--- a/styles/global.css
+++ b/styles/global.css
@@ -24,6 +24,7 @@ html{
 }
 
 body{
+  display: flex;
   height: 100vh;
   background: var(--background);
 }
@@ -51,7 +52,7 @@ body, button, input, textarea{
   border-width: 0;
 }
 
-/*------------ input and buttons*/
+/*--------- input and buttons*/
 input, button, .button{
   border-radius: .8rem;
   height: 5rem;
